manifests/envs/movie-dev/ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec: 
  type: ClusterIP
  selector:
    app: ui
  ports:
  - name: http
    port: 5800
    targetPort: 80
